@@ -8,7 +8,7 @@
 /**
  * The current system version.
  */
-define('VERSION', '7.18-dev');
+define('VERSION', '7.18');
 
 /**
  * Core API compatibility.
